2010-03-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/42718
	* pa.md (movmemsi): Set align to one if zero.
	(movmemdi): Likewise.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2010-03-18  Steven Bosscher  <steven@gcc.gnu.org>
		    Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/43360
	* loop-invariant.c (move_invariant_reg): Remove the REG_EQUAL
	note if we don't know its invariant status.

2010-03-02  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (override_options): Fix -mtune error message.

2010-02-18  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu-c.c (spu_resolve_overloaded_builtin): Call
	lang_hooks.types_compatible_p instead of comptypes.

2010-02-17  Mikael Pettersson  <mikpe@it.uu.se>

	* config/sparc/gas.h: New file.  Restore
	TARGET_ASM_NAMED_SECTION to its ELF default.
	* config/sparc/sysv4.h (TARGET_ASM_NAMED_SECTION): Do not
	check !HAVE_GNU_AS.
	* config/sparc/sparc.c (sparc_elf_asm_named_section):
	Likewise.  Add ATTRIBUTE_UNUSED to prototype.
	* config.gcc (sparc*-*-linux*): Include sparc/gas.h
	after sparc/sysv4.h.

2010-02-16  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/41917
	* rtlanal.c (num_sign_bit_copies1) <case UMOD>: If sign bit of second
	operand isn't known to be 0, return 1.

2010-02-04  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/42952
	* dse.c (const_or_frame_p): Remove MEM handling.

2010-01-31  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/42898
	Backport from mainline:
	2009-04-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gimplify.c (gimplify_modify_expr_rhs) <VAR_DECL>: Do not do a direct
	assignment from the constructor either if the target is volatile.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42898
	* gimplify.c (gimplify_init_constructor): For volatile LHS
	initialize a temporary.

2010-01-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
